# planit

./: .gitignore  README.md  build_settings.json  color_test.py  main.py  pyproject.toml  requirements.txt
planit/: README.md  main.py  resources.py  standard_types.py
planit/crawler/: README.md  data_formatter.py  webcrawler.py
planit/genetic/: README.md  genetic_algorithm.py  plan_optimizer.py  plantdata.py  quick_api.py
planit/model/: README.md  __init__.py  db.py  log.py
planit/plant_data/: README.md  __init__.py  db.py  dummy_implementation.py  log.py
planit/plant_data/dummy/: __init__.py  dummy_implementation.py
planit/setup/: database_setup.py
planit/setup/var/: planit.db
planit/ui/: README.md  beet_view.py  cell_quality_colors.py  plant_search.py  scrollable_canvas.py  syntax_highlighted_text.py  theme.py  toolbar.py  ui.py
planit/ui/themes/: dark_theme.toml  default_theme.toml
planit/ui/widgets/: __init__.py  callback_entry.py  fancy_listbox.py  syntax_highlighted_text.py  toolbar.py  vertically_scrollable_frame.py
resources/plantdata/: planit.db  plants.txt  symbiosis_data.json
resources/themes/: dark_theme.toml  default_theme.toml
